--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #121212; /* Dark background */
-    background-image: url('wallpaper.jpg');
+    background-image: url('Wallpaper.jpg');
     background-size: cover; /* Ensure the image covers the entire background */
     background-repeat: no-repeat;
     background-attachment: fixed;
