--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #121212; 
-    background-image: url('Wallpaper.jpg');
+    background-image: url('wallpaper4.png'); 
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -21,13 +21,11 @@ body {
     justify-content: center;
     min-height: 100vh;
     padding-top: 60px; 
-    margin: 0;
-    padding: 0;
 }
 
 /* Navigation Bar */
 nav {
-    background-color: #232524; 
+    background-color: #1a1a1a; 
     width: 100%;
     padding: 15px 0;
     display: flex;
@@ -43,32 +41,26 @@ nav ul {
     list-style: none;
     display: flex;
     gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
     padding: 0;
     margin: 0;
 }
 
 nav ul li {
-    display: inline;
+    position: relative;
 }
 
 nav ul li a {
-    color: #fff; 
+    color: #fff;
     text-decoration: none;
-    font-size: 1rem;
     padding: 10px 20px;
-    transition: background-color 0.3s, color 0.3s;
+    border-radius: 25px;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-nav ul li a:hover {
-    background-color: #adb1af; 
-    border-radius: 5px;
-}
-
+nav ul li a:hover,
 nav ul li a.active {
-    background-color: #191a19; 
-    border-radius: 5px;
+    background-color: #363535; 
+    color: #fff;
 }
 
 /* Container */
@@ -80,6 +72,7 @@ nav ul li a.active {
     text-align: center;
     padding: 20px;
     width: 100%;
+    padding-top: 80px; 
     max-width: 800px;
     margin: auto;
     background-color: #282828; 
@@ -181,11 +174,12 @@ button {
     padding: 10px 20px;
     font-size: 1rem;
     color: #fff;
-    background-color: #333; 
+    background-color: #181818; 
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.3s;
+    margin-top: 20px; 
 }
 
 button:hover {
@@ -251,4 +245,54 @@ p {
     .converters {
         grid-template-columns: 1fr;
     }
+}
+
+/* Main Container */
+main.container {
+    padding-top: 80px; 
+}
+
+/* Footer */
+footer {
+    background-color: #1a1a1a; 
+    width: 100%;
+    padding: 10px 0; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+    color: #fff; 
+    font-size: 0.9rem;
+    text-align: center;
+}
+
+footer p {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    color: #ccc; 
+}
+
+footer a {
+    color: #ffffff; 
+    text-decoration: none;
+    margin: 0 5px;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer .social-media,
+footer .footer-links {
+    margin-top: 5px; 
+}
+
+footer .social-media a,
+footer .footer-links a {
+    margin: 0 3px; 
 }
