--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #121212; 
-    background-image: url('wallpaper4.png'); 
+    background-image: url('wallpaper.png'); 
     background-size: cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
