--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,8 @@
 /* Global Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #121212; 
-    background-image: url('BackgroundWallpaper.png')no-repeat center center fixed; 
-    background-size: cover; 
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center center; 
+    background: url('Backgroundwallpaper.png') no-repeat center center fixed;
+    background-size: cover;
     color: #fff; 
     display: flex;
     flex-direction: column;
