--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /* Global Styles */
 body {
     font-family: Arial, sans-serif;
-    background: url('Backgroundwallpaper.png') no-repeat center center fixed;
+    background: url('BackgroundWallpaper.png') no-repeat center center fixed;
     background-size: cover;
     color: #fff; 
     display: flex;
